--- a/Projeto/cliente.html
+++ b/Projeto/cliente.html
@@ -12,9 +12,10 @@
     <script src="resources/scripts/jquery-1.7.1.min.js"></script>
     <script src="resources/scripts/jquery-ui-1.8.10.custom.min.js"></script>
     <script src="resources/scripts/prototypePre.js"></script>
-    <script src="data/document.js"></script>
+    <!-- <script src="data/document.js"></script> -->
     <script src="resources/scripts/prototypePost.js"></script>
     <script src="files/cliente/data.js"></script>
+    <script src="files/cliente/validarSenha.js"></script>
     <script type="text/javascript">
       $axure.utils.getTransparentGifPath = function() { return 'resources/images/transparent.gif'; };
       $axure.utils.getOtherPath = function() { return 'resources/Other.html'; };
