--- a/Projeto/cliente.html
+++ b/Projeto/cliente.html
@@ -53,7 +53,7 @@
 
       <!-- btnEntrar (HTML Button) -->
       <div id="u7" class="ax_default html_button" data-label="btnEntrar">
-        <input id="u7_input" type="submit" value="Entrar"/>
+        <input id="u7_input" type="submit" value="Entrar" onclick="clique_botao();"/>
       </div>
 
         <!-- Entrar Face (Label) -->
